--- a/index.html
+++ b/index.html
@@ -24,12 +24,16 @@
       <div class="filter-options">
         <h2>Filter Results</h2>
           <div class="filter-results">
-            <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
-              <option value="all">All Neighborhoods</option>
-            </select>
-            <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
-              <option value="all">All Cuisines</option>
-            </select>
+            <label for="neighborhoods-select">
+              <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+                <option value="all">All Neighborhoods</option>
+              </select>
+            </label>
+            <label for="cuisines-select">
+              <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+                <option value="all">All Cuisines</option>
+              </select>
+            </label>
           </div>
       </div>
       <ul id="restaurants-list"></ul>
