--- a/restaurant.html
+++ b/restaurant.html
@@ -19,8 +19,8 @@
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
-      <li><a href="/">Home</a></li>
+    <ul id="breadcrumb" aria-label="breadcrumb">
+      <li><a href="/" aria-current="page">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
     <!-- End nav -->
@@ -31,7 +31,7 @@
   <main id="maincontent">
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" role="application" aria-label="restaurant locations"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
