--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <main id="maincontent">
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" role="application" aria-label="restaurant locations"></div>
     </section>
     <section>
       <div class="filter-options">
